# zeptomail_rs

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  main.rs
src/email/: batch.rs  single.rs
src/file_cache/: upload.rs
src/models/: api_failure.rs  api_success.rs  common.rs  email.rs  file_cache.rs  mod.rs  responses.rs  template.rs
src/templates/: batch.rs  mod.rs  single.rs
