[package]
name = "zeptomail_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }