[package]
name = "zeptomail_rs"
version = "0.1.0"
edition = "2021"
authors = ["Hadi hadi@xylex.ai & Floris floris@xylex.ai"]
description = "Lightweight Rust client for ZeptoMail"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hadi-xlx/zeptomail_rs"
keywords = ["Zoho", "ZohoMail","ZeptoMail","ZeptoMail API","ZeptoMail Rust","ZeptoMail SDK"]

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
